# aur-raider

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: cli.rs  html.rs  lib.rs  main.rs  models.rs  scrap.rs  selectors.rs  serialization.rs
src/database/: dummy.rs  mod.rs  redis_io.rs  shared.rs  skytable_io.rs  surreal_io.rs
