[package]
name = "aur-raider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bson = "2.6.1"
clap = { version = "4.2.5", features = ["derive"] }
lazy_static = "1.4.0"
redis = "0.23.0"
reqwest = "0.11.14"
scraper = "0.15.0"
serde = "1.0.160"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
