[package]
name = "aur-raider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "aur-raider"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
bson = "2.6.1"
clap = { version = "4.2.5", features = ["derive"] }
lazy_static = "1.4.0"
redis = "0.23.0"
reqwest = "0.11.14"
scraper = "0.15.0"
serde = "1.0.160"
serde_json = "1.0.96"
skytable = "0.7.5"
surrealdb = "1.0.0-beta.9"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
