[package]
name = "aur-raider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "aur-raider"
path = "src/main.rs"

[features]
models = []
default = ["models", "dep:async-trait", "dep:bson", "dep:clap", "dep:lazy_static", "dep:redis", "dep:reqwest", "dep:scraper", "dep:serde_json", "dep:skytable", "dep:surrealdb", "dep:tokio", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
anyhow = "1.0.70"
async-trait = {version = "0.1.68", optional = true}
bson = {version = "2.6.1", optional = true}
clap = { version = "4.2.5", features = ["derive"], optional = true}
lazy_static = { version = "1.4.0", optional = true }
redis = {version = "0.23.0", optional = true}
reqwest = {version = "0.11.14", optional = true}
scraper = {version = "0.15.0", optional = true}
serde = { version = "1.0.160", features = ["derive"] }
serde_json = {version = "1.0.96", optional = true}
skytable = {version ="0.7.5", optional = true}
surrealdb = {version = "1.0.0-beta.9", optional = true}
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"], optional = true}
tracing = {version =  "0.1.37", optional = true}
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"], optional = true }
